--- a/myproject/myproject/templates/base.html
+++ b/myproject/myproject/templates/base.html
@@ -57,6 +57,7 @@
             background-color: #2c2c2c; /* Темный фон для выпадающего меню */
             border-radius: 5px;
         }
+        
         .dropdown-item {
             color: #ffffff;
         }
@@ -80,27 +81,49 @@
             justify-content: center;
             margin-bottom: 20px;
         }
+        
+        /* Анимация поля поиска */
         .search-bar input {
-            width: 500px; /* Увеличиваем ширину поля поиска */
+            width: 500px;
             border-radius: 25px;
             border: 1px solid #ccc;
             padding: 10px 20px;
             font-size: 16px;
-            background-color: #2c2c2c; /* Темный фон для поля поиска */
-            color: #ffffff; /* Белый текст */
+            background-color: #2c2c2c;
+            color: #ffffff;
+            transition: width 0.3s ease-in-out, box-shadow 0.3s ease; /* Добавляем анимацию изменения ширины и тени */
         }
+        
+        .search-bar input:focus {
+            width: 600px; /* Увеличиваем ширину при фокусе */
+            box-shadow: 0 0 8px rgba(255, 255, 255, 0.8); /* Тень при фокусе */
+        }
+        
+        /* Анимация кнопки поиска */
         .search-bar button {
             border-radius: 25px;
-            background-color: #333; /* Черный цвет кнопки */
+            background-color: #333;
             color: white;
             border: none;
             padding: 10px 20px;
             margin-left: 10px;
             font-size: 16px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s ease-in-out; /* Добавляем анимацию фона и увеличения */
         }
+        
         .search-bar button:hover {
-            background-color: #444; /* Темно-серый цвет при наведении */
+            background-color: #444;
+            transform: scale(1.05); /* Увеличиваем кнопку при наведении */
+        }
+        .post-item {
+            opacity: 0;
+            transform: translateY(20px); /* Начальное положение немного ниже */
+            transition: opacity 0.5s ease-out, transform 0.5s ease-out; /* Плавное появление */
+        }
+        
+        .post-item.visible {
+            opacity: 1;
+            transform: translateY(0); /* Посты поднимаются в свое место */
         }
         footer {
             background-color: #1c1c1c; /* Темно-серый */
@@ -136,7 +159,13 @@
             .nav-link:hover {
                 color: #ffc107; /* Золотистый цвет текста при наведении */
             }
+            .media {
+                transition: transform 0.3s ease; /* Плавный переход */
+            }
             
+            .media:hover {
+                transform: scale(1.05); /* Увеличение карточки на 5% */
+            }
         }
     </style>
 </head>
@@ -153,65 +182,15 @@
                     <i class='bx bx-food-menu'></i>Категории блюд
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="max-height: 300px; overflow-y: auto; position: relative;">
-                    <a class="dropdown-item" href="#">Завтраки</a>
-                    <a class="dropdown-item" href="#">Закуски</a>
-                    <a class="dropdown-item" href="#">Салаты</a>
-                    <a class="dropdown-item" href="#">Супы</a>
-                    <a class="dropdown-item" href="#">Гарниры</a>
-                    <a class="dropdown-item" href="#">Пасты</a>
-                    <a class="dropdown-item" href="#">Основные блюда</a>
-                    <a class="dropdown-item" href="#">Мясные блюда</a>
-                    <a class="dropdown-item" href="#">Рыбные блюда</a>
-                    <a class="dropdown-item" href="#">Вегетарианские блюда</a>
-                    <a class="dropdown-item" href="#">Веганские блюда</a>
-                    <a class="dropdown-item" href="#">Птица</a>
-                    <a class="dropdown-item" href="#">Блюда из яиц</a>
-                    <a class="dropdown-item" href="#">Блюда из картофеля</a>
-                    <a class="dropdown-item" href="#">Блюда на гриле</a>
-                    <a class="dropdown-item" href="#">Торты и пироги</a>
-                    <a class="dropdown-item" href="#">Печенье и кексы</a>
-                    <a class="dropdown-item" href="#">Десерты</a>
-                    <a class="dropdown-item" href="#">Напитки</a>
-                    <a class="dropdown-item" href="#">Коктейли</a>
-                    <a class="dropdown-item" href="#">Соусы</a>
-                    <a class="dropdown-item" href="#">Маринады</a>
-                    <a class="dropdown-item" href="#">Консервация</a>
-                    <a class="dropdown-item" href="#">Рождественские блюда</a>
-                    <a class="dropdown-item" href="#">Пасхальные блюда</a>
-                    <a class="dropdown-item" href="#">Зимние блюда</a>
-                    <a class="dropdown-item" href="#">Летние блюда</a>
-                    <a class="dropdown-item" href="#">Рецепты для детей</a>
-                    <a class="dropdown-item" href="#">Диетические блюда</a>
-                    <a class="dropdown-item" href="#">Низкоуглеводные блюда</a>
-                    <a class="dropdown-item" href="#">Безглютеновые блюда</a>
-                    <a class="dropdown-item" href="#">Праздничные блюда</a>
-                    <a class="dropdown-item" href="#">Быстрые рецепты</a>
-                    <a class="dropdown-item" href="#">Медленные рецепты (мультиварка)</a>
-                    <a class="dropdown-item" href="#">Блюда на пару</a>
-                    <a class="dropdown-item" href="#">Запеканки</a>
-                    <a class="dropdown-item" href="#">Уличная еда</a>
-                    <a class="dropdown-item" href="#">Азия: Китайские блюда</a>
-                    <a class="dropdown-item" href="#">Азия: Японские блюда</a>
-                    <a class="dropdown-item" href="#">Азия: Индийские блюда</a>
-                    <a class="dropdown-item" href="#">Средиземноморская кухня</a>
-                    <a class="dropdown-item" href="#">Итальянская кухня</a>
-                    <a class="dropdown-item" href="#">Французская кухня</a>
-                    <a class="dropdown-item" href="#">Мексиканская кухня</a>
-                    <a class="dropdown-item" href="#">Американская кухня</a>
-                    <a class="dropdown-item" href="#">Русская кухня</a>
-                    <a class="dropdown-item" href="#">Грузинская кухня</a>
-                    <a class="dropdown-item" href="#">Турецкая кухня</a>
-                    <a class="dropdown-item" href="#">Блюда на каждый день</a>
-                    <a class="dropdown-item" href="#">Ужин на скорую руку</a>
-            
+                    {% for category in categories %}
+                        <a class="dropdown-item" href="{% url 'category-posts' category.id %}">{{ category.name }}</a>
+                    {% endfor %}
                     <!-- Стрелка вниз -->
                     <div class="scroll-arrow" style="text-align: center; margin-top: 10px;">
                         <i class='bx bx-chevron-down'></i>
                     </div>
                 </div>
             </div>
-            
-
             {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'create' %}"><i class='bx bxs-plus-circle'></i>Новый рецепт</a>
                 <a class="nav-link" href="{% url 'profile' %}"><i class='bx bx-user'></i>Профиль</a>
@@ -241,11 +220,12 @@
         <header class="mb-4">
             <h1 class="text-center">Добро пожаловать на кулинарный блог!</h1>
             <div class="search-bar">
-                <form class="form-inline">
-                    <input type="search" placeholder="Поиск по рецептам" aria-label="Search">
+                <form class="form-inline" action="{% url 'search-results' %}" method="GET">
+                    <input type="search" name="q" placeholder="Поиск по рецептам" aria-label="Search">
                     <button type="submit">Найти</button>
                 </form>
             </div>
+            
         </header>
         <main role="main" class="container">
             <div class="row">
@@ -271,5 +251,16 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script>  
+        document.addEventListener('DOMContentLoaded', function() {
+            const posts = document.querySelectorAll('.post-item');
+            
+            posts.forEach((post, index) => {
+                setTimeout(() => {
+                    post.classList.add('visible');
+                }, index * 100); // задержка для появления постов один за другим
+            });
+        });
+    </script>
 </body>
 </html>
